fix: increase rbutton ripple animation duration and change hover animation to be more visible

--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -32,7 +32,7 @@ span.ripple {
   position: absolute;
   border-radius: 50%;
   transform: scale(0);
-  animation: ripple 400ms linear;
+  animation: ripple 600ms linear;
   background-color: rgba(255, 255, 255, 0.4);
 }
 
